# game

./: build.gradle  config.gradle
app/: .gitignore  build.gradle
app/beta/: output-metadata.json
app/release/: output-metadata.json
app/src/androidTest/java/com/syd/game/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  anim.cpp  ascii_to_geom.cpp  dialog_scene.cpp  indexbuf.cpp  input_util.cpp  jni_util.cpp  main.cpp  native_engine.cpp  obstacle.cpp  obstacle_generator.cpp  our_shader.cpp  play_scene.cpp  scene.cpp  scene_manager.cpp  sfxman.cpp  shader.cpp  shape_renderer.cpp  tex_quad.cpp  text_renderer.cpp  texture.cpp  ui_scene.cpp  util.cpp  vertexbuf.cpp  welcome_scene.cpp
app/src/main/cpp/data/: cube_geom.inl  tunnel_geom.inl
app/src/main/cpp/include/: anim.hpp  ascii_to_geom.hpp  dialog_scene.hpp  engine.hpp  game_consts.hpp  indexbuf.hpp  joystick-support.hpp  native_engine.hpp  obstacle.hpp  obstacle_generator.hpp  our_shader.hpp  play_scene.hpp  scene.hpp  scene_manager.hpp  sfxman.hpp  shader.hpp  shape_renderer.hpp  simplegeom.hpp  tex_quad.hpp  text_renderer.hpp  texture.hpp  ui_scene.hpp  vertexbuf.hpp  welcome_scene.hpp
app/src/main/cpp/include/common/: common.hpp  our_key_codes.hpp
app/src/main/cpp/include/util/: input_util.hpp  jni_util.hpp  util.hpp
app/src/main/java/com/syd/game/: MainActivity.java
app/src/main/java/com/syd/game/view/: SydGameActivity.java
app/src/main/java/com/syd/game/view/data/: LoginDataSource.java  LoginRepository.java  Result.java
app/src/main/res/layout/: activity_login.xml
app/src/main/res/layout-w936dp/: activity_login.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/syd/game/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
